--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -325,7 +325,7 @@
                                         <a href="@Url.Action("Index", "Nets")"> Поддерживаемы сети</a>
                                     </li>
                                     <li>
-                                        <a href="@Url.Action("Index", "LikeButtons")"> Кнопки лайков</a>
+                                        <a href="@Url.Action("Index", "ShareButtons")"> Кнопки шар</a>
                                     </li>
                                 </ul>
                             </li>
