--- a/GE.WebUI/Views/News/Details.cshtml
+++ b/GE.WebUI/Views/News/Details.cshtml
@@ -30,7 +30,7 @@
         }
         @Html.Raw(Model.Html)
 
-        @Html.SxLikeButtons(global_asax.LikeButtons)
+        @Html.SxShareButtons(global_asax.ShareButtons)
     </div>
 
 
