--- a/GE.WebUI/Views/Shared/_Foreword.cshtml
+++ b/GE.WebUI/Views/Shared/_Foreword.cshtml
@@ -14,5 +14,5 @@
         <br />
         Автор материала: <strong>@Model.UserNikName</strong>
     </p>
-    @Html.SxLikeButtons(global_asax.LikeButtons)
+    @Html.SxShareButtons(global_asax.ShareButtons)
 </blockquote>
