--- a/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
+++ b/GE.WebAdmin/Views/Aphorisms/Edit.cshtml
@@ -56,6 +56,12 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(x => x.Foreword, new { @class = "control-label" }) (не больше 400 символов включая пробелы)
+        @Html.EditorFor(x => x.Foreword, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите содержание" } })
+        @Html.ValidationMessageFor(x => x.Foreword)
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(x => x.Html, new { @class = "control-label" })
         @Html.EditorFor(x => x.Html, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите содержание" } })
         @Html.ValidationMessageFor(x => x.Html)
@@ -69,6 +75,8 @@
 
 @section scripts{
     <script type="text/javascript" src="~/bower_components/ckeditor/ckeditor.js"></script>
+<script src="~/content/dist/js/jquery.validate.min.js"></script>
+<script src="~/content/dist/js/jquery.validate.unobtrusive.min.js"></script>
     <script type="text/javascript">
         if (CKEDITOR.instances['Html']) {
             CKEDITOR.remove(CKEDITOR.instances['Html']);
