--- a/GE.WebUI/Views/Articles/Details.cshtml
+++ b/GE.WebUI/Views/Articles/Details.cshtml
@@ -29,7 +29,7 @@
             <img class="f-picture" alt="@Model.Title" src="@Url.Action("Picture", "Pictures", new { id= Model.FrontPictureId })" />
         }
         @Html.Raw(Model.Html)
-        @Html.SxLikeButtons(global_asax.LikeButtons)
+        @Html.SxShareButtons(global_asax.ShareButtons)
     </div>
 
     @Html.Partial("_MaterialInfo", Model)
