--- a/GE.WebUI/less/material.less
+++ b/GE.WebUI/less/material.less
@@ -141,7 +141,25 @@
 }
 
 .mat-fwd > .fwd {
-    font-size: 16px;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.2;
+    @media (max-width: @screen-xs-max) {
+        font-size: 16px;
+        line-height: 1.3;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+        
+    }
 }
 
 .m-info .fa {
