--- a/GE.WebUI/less/pop-mat.less
+++ b/GE.WebUI/less/pop-mat.less
@@ -66,6 +66,7 @@
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        margin-top:@def-pad;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
