--- a/GE.WebUI/Views/Aphorisms/Details.cshtml
+++ b/GE.WebUI/Views/Aphorisms/Details.cshtml
@@ -1,15 +1,15 @@
 ﻿@using SX.WebCore;
 @model VMDetailAphorism
 @{
-    var title = ViewBag.Title;
-    var h1 = ViewBag.H1;
-    ViewBag.Title = title ?? Model.Aphorism.Title;
-    ViewBag.PageImage = Model.Aphorism.Author!=null && Model.Aphorism.Author.PictureId.HasValue
-        ? Url.ContentAbsUrl(Url.Action("Picture", "Pictures", new { id = Model.Aphorism.Author.PictureId }))
+    var author = (VMAuthorAphorism)ViewBag.Author;
+    var category = (VMMaterialCategory)ViewBag.Category;
+    ViewBag.Title = ViewBag.Title ?? Model.Aphorism.Title;
+    ViewBag.PageImage = author != null && author.PictureId.HasValue
+        ? Url.ContentAbsUrl(Url.Action("Picture", "Pictures", new { id = author.PictureId }))
         : null;
     ViewBag.H1 = ViewBag.H1 ?? ViewBag.Title;
-    ViewBag.Description = ViewBag.Description ?? (Model.Aphorism.Author!=null? Model.Aphorism.Author.Name+". ":null)+"Афоризмы, короткие изречения великих людей, коротко о главном";
-    var author = Model.Aphorism.Author != null && Model.Aphorism.Author.Name != null ? Model.Aphorism.Author.Name : "Аноним";
+    ViewBag.Description = ViewBag.Description ?? (author != null? author.Name+". ":null)+"Афоризмы, короткие изречения великих людей, коротко о главном";
+
 }
 
 @section styles{
@@ -25,32 +25,32 @@
     <div class="row">
         <div class="col-md-9">
             <blockquote style="color:white;">
-                @if (Model.Aphorism.Author != null && Model.Aphorism.Author.PictureId.HasValue)
+                @if (author != null && author.PictureId.HasValue)
                 {
-                    <figure class="author-img img-circle" style="background-image:url(@Url.Action("Picture", "Pictures", new { id=Model.Aphorism.Author.PictureId}));">
+                    <figure class="author-img img-circle" style="background-image:url(@Url.Action("Picture", "Pictures", new { id=author.PictureId}));">
 
                     </figure>
                 }
                 @Html.Raw(Model.Aphorism.Html)
-                <h4 class="small">@(author)</h4>
+                <h4 class="small">@(author==null?"Аноним": author.Name)</h4>
             </blockquote>
             @Html.SxShareButtons(global_asax.ShareButtons)
 
-            @Html.Action("Edit", "Comments", new { mid = Model.Aphorism.Id, mct = SX.WebCore.Enums.ModelCoreType.Aphorism }))
+            @Html.Action("Edit", "Comments", new { mid = Model.Aphorism.Id, mct = Enums.ModelCoreType.Aphorism }))
 
             @*author*@
             @if (Model.TopForAuthor.Any())
             {
                 @Html.Partial("_List", Model.TopForAuthor, new ViewDataDictionary { { "Author", author } })
                 <div class="text-center">
-                    <a href="@Url.Action("list", new { author=author=="Аноним"? "no":author})" class="btn btn-default btn-transparent white">Все афоризмы автора</a>
+                    <a href="@Url.Action("List", new { author=author.TitleUrl})" class="btn btn-default btn-transparent white">Все афоризмы автора</a>
                 </div>
             }
 
             @*category*@
             @if (Model.TopForCategory.Any())
             {
-                @Html.Partial("_List", Model.TopForCategory, new ViewDataDictionary { { "Category", Model.Aphorism.Category.Title } })
+                @Html.Partial("_List", Model.TopForCategory, new ViewDataDictionary { { "Category", category } })
                 <div class="text-center">
                     <a href="@Url.Action("List", new { controller="Aphorisms", categoryId= Model.Aphorism.CategoryId})" class="btn btn-default btn-transparent white">Все афоризмы категории</a>
                 </div>
@@ -69,7 +69,7 @@
     <script type="text/javascript" src="~/Content/dist/js/jquery.validate.unobtrusive.min.js"></script>
     <script type="text/javascript">
         $(function () {
-            $('section[id^="comments-"]').load('/comments/list?mid=' +@Model.Aphorism.Id +'&mct=' + '@SX.WebCore.Enums.ModelCoreType.Aphorism');
+            $('section[id^="comments-"]').load('/comments/list?mid=' +@Model.Aphorism.Id +'&mct=' + '@Enums.ModelCoreType.Aphorism');
         });
     </script>
 }
