--- a/GE.WebUI/less/game-list.less
+++ b/GE.WebUI/less/game-list.less
@@ -25,7 +25,7 @@
 .game-menu {
     background-color: @color-game-menu;
     z-index: 2;
-    /*position: fixed;*/
+    position: absolute;
     width: 100%;
 
     @media (max-width: @screen-xs-max) {
@@ -44,7 +44,15 @@
     }
 
     @media (min-width: @screen-lg-min) {
+        border-bottom:1px solid rgba(255,255,255,.1);
     }
+}
+
+.game-menu.fixed {
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 .game-menu > .container {
