--- a/GE.WebUI/Views/News/_LastCategoryBlock.cshtml
+++ b/GE.WebUI/Views/News/_LastCategoryBlock.cshtml
@@ -20,7 +20,7 @@
                                 news = Model.News[i];
                                 <li>
                                     <a @(news.CategoryId != null?string.Format("data-category-id={0}", news.CategoryId):null) href="@news.Url(Url)">
-                                        <span class="date">@news.DateCreate.ToString("dd.MM.yyy")</span> <span class="title">@news.Title</span>
+                                        <span class="date">@news.DateOfPublication.ToString("dd.MM.yyy")</span> <span class="title">@news.Title</span>
                                     </a>
                                 </li>
                             }
