--- a/GE.WebAdmin/Views/Pictures/Index.cshtml
+++ b/GE.WebAdmin/Views/Pictures/Index.cshtml
@@ -9,9 +9,9 @@
 }
 
 <h2>@ViewBag.Title</h2>
-<p class="text-warning" style="max-width:600px;">
-    При добалении изображений не допускайте разрастания базы данных. Размер добавляемого файла не должен превышать <b>150 kB</b>. Перед добавлением рекомендуется сжать изображение специализированным online-сервисом (например <a href="http://resizepiconline.com" rel="nofollow" target="_blank"><b>http://resizepiconline.com</b></a>)
-</p>
+<div class="alert alert-warning">
+    <strong>Внимание!</strong> При добалении изображений не допускайте разрастания базы данных. Размер добавляемого файла не должен превышать <b>150 kB</b>. Перед добавлением рекомендуется сжать изображение специализированным online-сервисом (например <a href="http://resizepiconline.com" rel="nofollow" target="_blank"><b>http://resizepiconline.com</b></a>)
+</div>
 <br />
 <div id="grid-pictures">
     @Html.Partial("_GridView", Model)
