--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     var values = Request.RequestContext.RouteData.Values;
     var controllerName = (string)values["controller"];
     var actionName = (string)values["action"];
-    var bannerControllerBlackList = new string[] { "employees", "account", "error", "sitetests", "sitequetions" };
+    var bannerControllerBlackList = new string[] { "employees", "account", "error", "sitequetions" };
 }
 <!DOCTYPE html>
 <html lang="en">
