--- a/GE.WebUI/Views/SiteTests/_Step.cshtml
+++ b/GE.WebUI/Views/SiteTests/_Step.cshtml
@@ -9,9 +9,10 @@
 {
     using (Ajax.BeginForm("Step", "SiteTests", new AjaxOptions { HttpMethod = "post", UpdateTargetId = "st-page" }))
     {
-        <p>
+        <br />
+        <blockquote>
             @Html.Raw(Model.Question.Test.Description)
-        </p>
+        </blockquote>
 
         @Html.AntiForgeryToken()
 
@@ -36,9 +37,21 @@
 }
 else
 {
-   <h2>@Model.Subject.Title</h2>
-   <p>
-       @Html.Raw(Model.Subject.Description)
-   </p>
-   <a class="btn btn-default" href="@Url.Action("Details", "SiteTests", new { titleUrl=Model.Question.Test.TitleUrl})">Пройти заново</a>
+    <br />
+    <h2>@Model.Subject.Title</h2>
+    <br />
+    <div>
+        @if (Model.Subject.PictureId.HasValue)
+        {
+            <figure class="step__subject-figure" style="background-image:url(@Url.Action("Picture","Pictures", new { id=Model.Subject.PictureId})"></figure>
+        }
+        @Html.Raw(Model.Subject.Description)
+    </div>
+    <br />
+
+    <div class="text-center">
+        @Html.SxShareButtons(global_asax.ShareButtons)
+        <br />
+        <a class="btn btn-default btn-transparent white" href="@Url.Action("Details", "SiteTests", new { titleUrl=Model.Question.Test.TitleUrl})">Пройти заново</a>
+    </div>
 }
