--- a/GE.WebUI/less/site-tests.less
+++ b/GE.WebUI/less/site-tests.less
@@ -95,3 +95,12 @@
     position: absolute;
     bottom: @def-pad;
 }
+
+//step__subject
+.step__subject-figure{
+    background-position:center center;
+    background-size:cover;
+    width:150px;
+    height:150px;
+    margin:0 @def-pad*2 @def-pad 0;
+}
