--- a/GE.WebAdmin/Views/AuthorAphorisms/Index.cshtml
+++ b/GE.WebAdmin/Views/AuthorAphorisms/Index.cshtml
@@ -8,17 +8,19 @@
 }
 
 <h2>@ViewBag.Title</h2>
-@if(User.IsInRole("architect"))
+@if (User.IsInRole("architect"))
 {
-    <div class="text-right">
-        <form method="post" action="@Url.Action("GenerateTitleUrl","AuthorAphorisms")">
-            <button type="submit" class="btn btn-default">Сгенерировать TitleUrl</button>
-        </form>
+    <div class="form-group">
+        <div class="text-right">
+            <form method="post" action="@Url.Action("GenerateTitleUrl","AuthorAphorisms")">
+                <button type="submit" class="btn btn-default">Сгенерировать TitleUrl</button>
+            </form>
+        </div>
     </div>
 }
-<p class="text-warning" style="max-width:600px;">
-    При добалении изображений не допускайте разрастания базы данных. Размер добавляемого файла не должен превышать <b>150 kB</b> . Перед добавлением рекомендуется сжать изображение специализированным online-сервисом (например <a href="http://resizepiconline.com" rel="nofollow">http://resizepiconline.com</a>). <b>Рекомедуемый размер изображений для авторов афоризмов - 100 x 100 px</b>
-</p>
+<div class="alert alert-warning">
+    <strong>Внимание!</strong> При добалении изображений не допускайте разрастания базы данных. Размер добавляемого файла не должен превышать <b>150 kB</b> . Перед добавлением рекомендуется сжать изображение специализированным online-сервисом (например <a href="http://resizepiconline.com" rel="nofollow">http://resizepiconline.com</a>). <b>Рекомедуемый размер изображений для авторов афоризмов - 100 x 100 px</b>
+</div>
 <br />
 <div id="grid-author-ap">
     @Html.Partial("_GridView", Model)
