--- a/GE.WebAdmin/less/grid-aphorisms.less
+++ b/GE.WebAdmin/less/grid-aphorisms.less
@@ -1,4 +1,4 @@
-﻿@import (reference) "../bower_components/bootstrap/less/variables";
+﻿@import (reference) "../bower_components/bootstrap/less/variables.less";
 @import (reference) "colors.less";
 
 .content {
