--- a/GE.WebAdmin/less/sb-admin-2.less
+++ b/GE.WebAdmin/less/sb-admin-2.less
@@ -180,7 +180,7 @@ body {
     color: #fff;
 }
 
-.chat {
+/*.chat {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -212,7 +212,7 @@ body {
 .chat-panel .panel-body {
     height: 350px;
     overflow-y: scroll;
-}
+}*/
 
 .login-panel {
     margin-top: 25%;
