--- a/GE.WebAdmin/less/chat.less
+++ b/GE.WebAdmin/less/chat.less
@@ -6,6 +6,15 @@
 
 }
 
+.chat #online-users .list-group-item{
+    transition:all .2s;
+}
+
+.chat #online-users .list-group-item:hover{
+    cursor:pointer;
+    background-color:#eee !important;
+}
+
 @w:50px;
 .chat__user{
     height:@w;
