--- a/GE.WebAdmin/Views/Chat/Index.cshtml
+++ b/GE.WebAdmin/Views/Chat/Index.cshtml
@@ -16,20 +16,14 @@
 <div class="chat" ng-app="app">
     <div class="row">
         <div class="col-md-3">
-            <h2>Сейчас на сайте</h2>
-            <div id="online-users" ng-controller="chatController">
-                <div class="list-group">
-                    <div class="list-group-item" ng-repeat="user in users">
-                        <div class="chat__user">
-                            <figure class="img-circle" ng-style="{'background-image':'url(/pictures/picture/{{user.AvatarId}})'}"></figure>
-                            {{user.Email}}<br />
-                            <strong>{{user.NikName}}</strong>
-                        </div>
-                    </div>
-                </div>
+            <h3>Сейчас на сайте</h3>
+            <div id="online-users">
+                
             </div>
         </div>
-        <div class="col-md-9"></div>
+        <div class="col-md-9">
+            <h3>Диалоги</h3>
+        </div>
     </div>
 </div>
 
@@ -39,16 +33,44 @@
     <script src="~/content/dist/js/jquery.signalR.min.js"></script>
     <script src="~/signalr/hubs"></script>
     <script>
-        //angular
-        var app = angular.module('app', []);
-
         //signalr
         var chat = $.connection.sxChatHub;
         chat.client.addUserToChatList = function (user) {
-            var $scope = angular.element('#online-users').scope();
-            $scope.add(user);
+            addUserToList(JSON.parse(user));
+        };
+        chat.client.removeUserFromChatList = function (email) {
+            delUserFromList(email);
         };
         $.connection.hub.start();
+
+        $(function () {
+            $('#online-users').load('@Url.Action("OnlineUsers", "Chat")');
+        });
+
+        function addUserToList(user)
+        {
+            $item = $('#online-users .chat__user[data-email="' + user.Email + '"]');
+            if ($item.length != 0) return;
+
+            $listGroup = $('#online-users > .list-group');
+            $listGroupItem = $('<div class="list-group-item"><div class="chat__user" data-email="' + user.Email + '"></div></div>').hide();
+            $item = $listGroupItem.find('.chat__user[data-email="' + user.Email + '"]');
+            if (user.AvatarId != null)
+                $item.append('<figure class="img-circle" style="background-image:url(/pictures/picture/' + user.AvatarId + ')"></figure>');
+            $item.append(user.Email + '<br />');
+            $item.append('<strong>' + user.NikName + '</strong>');
+            $listGroup.append($listGroupItem);
+            $listGroupItem.fadeIn();
+        }
+
+        function delUserFromList(email)
+        {
+            $item = $('#online-users .chat__user[data-email="' + email + '"]');
+            if ($item.length == 0) return;
+
+            $item.closest('.list-group-item').fadeOut(function () {
+                $(this).remove();
+            });
+        }
     </script>
-    <script src="~/content/dist/jsControllers/chatController.js"></script>
 }
